--- a/src/package.json
+++ b/src/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
+    "scss-loader": "^0.0.1",
     "vuetify": "^2.5.5"
   },
   "devDependencies": {
